# ag-reachy-mini-vision-tracking

./: .gitignore  .prettierrc  README.md  hello_world.py  index.html  pyproject.toml  requirements.txt
ag_reachy_mini_vision_tracking/: app_state.py  main.py
ag_reachy_mini_vision_tracking/api/: endpoints.py
ag_reachy_mini_vision_tracking/api/websocket/: connection_manager.py
ag_reachy_mini_vision_tracking/config/: config.yml  config_loader.py
ag_reachy_mini_vision_tracking/debug/: dev_visualizer.py
ag_reachy_mini_vision_tracking/robot/: controller.py
ag_reachy_mini_vision_tracking/static/: index.html  main.js  style.css
ag_reachy_mini_vision_tracking/vision/: camera_handler.py  face_tracker.py  hand_detector.py  pid_controller.py  video_processor.py
client/: app.js  index.html  serve.py  styles.css
docs/: landmarks.txt
src/: application.py  hand_counting.py  hand_tracker.py  main.py  robot.py
src/config/: config.yml  config_loader.py
src/lib/: logger.py
src/robot/: robot_controller.py
src/tracking/: finger_counter.py  hand_constants.py  hand_tracker.py  hand_visualizer.py
src/websocket/: websocket_server.py
