[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "ag_reachy_mini_vision_tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reachy-mini"
]
keywords = ["reachy-mini-app"]

[project.entry-points."reachy_mini_apps"]
ag_reachy_mini_vision_tracking = "ag_reachy_mini_vision_tracking.main:AgReachyMiniVisionTracking"

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
ag_reachy_mini_vision_tracking = ["**/*"] # Also include all non-.py files